--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "t-build": "tailwindcss -i ./src/css/input.css -o ./src/css/styles.css",
+    "t-watch": "tailwindcss -i ./src/css/input.css -o ./src/css/styles.css --watch"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "tailwindcss": "^3.3.1"
   },
   "devDependencies": {
